--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -19,7 +19,7 @@ rayon = "1"
 bls-signatures = {version = "0.12.0", default-features = false, features = ["pairing"]}
 
 # Crypto related
-hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
+hex = "0.4.3"
 getrandom = "0.1.14"
 libsecp256k1 = "0.6"
 blake2b_simd = "0.5.10"
@@ -41,11 +41,11 @@ tiny-bip39 = "0.8.0"
 zx-bip44 = "0.1.0"
 
 extras = { path = "../extras"}
-fil_actor_cron = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0-rc.1" }
-fil_actor_init = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0-rc.1" }
-fil_actor_multisig = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0-rc.1" }
-fil_actor_paych = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0-rc.1" }
-fil_actor_miner = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0-rc.1" }
+fil_actor_cron = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+fil_actor_init = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+fil_actor_multisig = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+fil_actor_paych = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+fil_actor_miner = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
 
 fvm_shared = "3.0.0-alpha.20"
 fvm_ipld_encoding = "0.3.3"
