--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -16,7 +16,7 @@ serde_cbor = "0.11.1"
 serde_bytes = "0.11.5"
 rayon = "1"
 
-bls-signatures = {version = "0.12.0", default-features = false, features = ["pairing"]}
+bls-signatures = {version = "0.13.0", default-features = false, features = ["pairing"]}
 
 # Crypto related
 hex = "0.4.3"
@@ -24,7 +24,7 @@ getrandom = "0.1.14"
 libsecp256k1 = "0.6"
 blake2b_simd = "0.5.10"
 hmac = "0.8.1"
-zeroize = { version = "=1.1", default-features = false, features = ["zeroize_derive"] }
+zeroize = { version = "^1.1", default-features = false, features = ["zeroize_derive"] }
 sha2 = "0.9.2"
 
 # logging
