--- a/signer-npm/Cargo.toml
+++ b/signer-npm/Cargo.toml
@@ -23,6 +23,7 @@ base64 = "0.13.0"
 js-sys = "0.3.57"
 wasm-bindgen-futures = "0.4.15"
 serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.5.0"
 
 libc = "=0.2.118"
 const_fn = "=0.4.3"
