change packages and fix version

--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -41,11 +41,17 @@ tiny-bip39 = "0.8.0"
 zx-bip44 = "0.1.0"
 
 extras = { path = "../extras"}
-fil_actor_cron = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
-fil_actor_init = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
-fil_actor_multisig = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
-fil_actor_paych = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
-fil_actor_miner = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+# fil_actor_cron = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+# fil_actor_init = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+# fil_actor_multisig = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+# fil_actor_paych = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+# fil_actor_miner = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+
+fil_actor_cron = { package = "fil_actor_cron_v11", version = "2.0.0" }
+fil_actor_init = { package = "fil_actor_init_v11", version = "2.0.0" }
+fil_actor_multisig = { package = "fil_actor_multisig_v11", version = "2.0.0" }
+fil_actor_paych = { package = "fil_actor_paych_v11", version = "2.0.0" }
+fil_actor_miner = { package = "fil_actor_miner_v11", version = "2.0.0" }
 
 fvm_shared = "3.0.0-alpha.20"
 fvm_ipld_encoding = "0.3.3"
