feat: replace actors packages with chainsafe ones (#1047)
* replace actors packages with chainsafe ones

* change packages and fix version

* clippy

* rustfmt

--- a/extras/Cargo.toml
+++ b/extras/Cargo.toml
@@ -12,11 +12,17 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0"
 serde_alias = "0.0.2"
 
-fil_actor_cron = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
-fil_actor_init = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
-fil_actor_multisig = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
-fil_actor_paych = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
-fil_actor_miner = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+# fil_actor_cron = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+# fil_actor_init = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+# fil_actor_multisig = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+# fil_actor_paych = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+# fil_actor_miner = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
+
+fil_actor_cron = { package = "fil_actor_cron_v11", version = "2.0.0" }
+fil_actor_init = { package = "fil_actor_init_v11", version = "2.0.0" }
+fil_actor_multisig = { package = "fil_actor_multisig_v11", version = "2.0.0" }
+fil_actor_paych = { package = "fil_actor_paych_v11", version = "2.0.0" }
+fil_actor_miner = { package = "fil_actor_miner_v11", version = "2.0.0" }
 
 fvm_shared = "3.0.0-alpha.20"
 cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
@@ -24,3 +30,5 @@ base64 = "0.13.0"
 
 fvm_ipld_encoding = "0.3.3"
 fvm_ipld_bitfield = "0.5.1"
+
+frc42_dispatch = "=3.2.0"
