--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "filecoin-signer"
-version = "0.10.2"
+version = "0.0.0"
 authors = ["Zondax <info@zondax.ch>"]
 edition = "2018"
 license = "Apache-2.0"
@@ -40,7 +40,10 @@ tiny-bip39 = "0.8.0"
 
 zx-bip44 = "0.1.0"
 
-extras = { package = "extras-filecoin", version = "0.1.0" }
+# extras = { package = "extras-filecoin", version = "0.1.0" }
+extras = { path = "../extras", version = "0.1.0"}
+
+
 # fil_actor_cron = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
 # fil_actor_init = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
 # fil_actor_multisig = { version = "10.0.0", git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
