--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -104,9 +104,10 @@ jobs:
         # version is inside the tag name e.g extras@v0.1.0 (and we don't want the v)
         run: |
           export TAG_NAME=${{ github.event.release.tag_name }}
+          echo $TAG_NAME
           echo ${TAG_NAME:6}
           cat signer/Cargo.toml
-          sed -i "s/\"0.0.0\"/\"${TAG_NAME:6}\"/g" extras/Cargo.toml
+          sed -i "s/0.0.0/${TAG_NAME:6}/g" extras/Cargo.toml
           cat signer/Cargo.toml
           cargo publish -p extras-filecoin --dry-run --allow-dirty
         env:
@@ -134,7 +135,7 @@ jobs:
         run: |
           export TAG_NAME=${{ github.event.release.tag_name }}
           cat signer/Cargo.toml
-          sed -i "s/\"0.0.0\"/\"${TAG_NAME:6}\"/g" signer/Cargo.toml
+          sed -i "s/0.0.0/${TAG_NAME:6}/g" signer/Cargo.toml
           cat signer/Cargo.toml
           cargo publish -p filecoin-signer --dry-run --allow-dirty
         env:
