--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -87,13 +87,17 @@ jobs:
     needs: [ build ]
     if: startsWith(github.event.release.tag_name, 'extras')
     runs-on: ubuntu-latest
-    container:
-      image: zondax/rust-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install latest stable
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
       - name: Restore/Save sscache
         uses: actions/cache@v2
         with:
@@ -104,11 +108,8 @@ jobs:
         # version is inside the tag name e.g extras@v0.1.0 (and we don't want the v)
         run: |
           export TAG_NAME=${{ github.event.release.tag_name }}
-          echo ${TAG_NAME:6}
-          cat signer/Cargo.toml
-          sed -i "s/\"0.0.0\"/\"${TAG_NAME:6}\"/g" extras/Cargo.toml
-          cat signer/Cargo.toml
-          cargo publish -p extras-filecoin --dry-run --allow-dirty
+          sed -i "s/0.0.0/${TAG_NAME:8}/g" extras/Cargo.toml
+          cargo publish -p extras-filecoin --allow-dirty
         env:
            CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
@@ -116,13 +117,17 @@ jobs:
     needs: [ build ]
     if: startsWith(github.event.release.tag_name, 'rust')
     runs-on: ubuntu-latest
-    container:
-      image: zondax/rust-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install latest stable
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
       - name: Restore/Save sscache
         uses: actions/cache@v2
         with:
@@ -133,9 +138,7 @@ jobs:
         # version is inside the tag name e.g rust@v0.1.0 (and we don't want the v)
         run: |
           export TAG_NAME=${{ github.event.release.tag_name }}
-          cat signer/Cargo.toml
-          sed -i "s/\"0.0.0\"/\"${TAG_NAME:6}\"/g" signer/Cargo.toml
-          cat signer/Cargo.toml
+          sed -i "s/0.0.0/${TAG_NAME:6}/g" signer/Cargo.toml
           cargo publish -p filecoin-signer --dry-run --allow-dirty
         env:
            CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
