remove --dry-run

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -139,6 +139,6 @@ jobs:
         run: |
           export TAG_NAME=${{ github.event.release.tag_name }}
           sed -i "s/0.0.0/${TAG_NAME:6}/g" signer/Cargo.toml
-          cargo publish -p filecoin-signer --dry-run --allow-dirty
+          cargo publish -p filecoin-signer --allow-dirty
         env:
            CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
