--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Zondax <info@zondax.ch>"]
 edition = "2018"
 license = "Apache-2.0"
 repository = "https://github.com/Zondax/filecoin-signing-tools"
-description =""
+description = "Filecoin signing utilitary functions."
 
 [dependencies]
 thiserror = "1.0.30"
